스토어로케이터 image 자동  슬라이드 효과 부여

--- a/main.html
+++ b/main.html
@@ -103,18 +103,25 @@
         </section>
         <!-- 스토어 로케이터 -->
         <section id="store">
-            <img src="./images/스토어로케이터/store.jpg.jpg" alt="">
-            <div class="s_script">
+            <article class="l_container">
+                <ul class="l_slider">
+                    <li class="l_item" class="hannam"><img src="images/스토어로케이터/store.jpg"></li>
+                    <li class="l_item" class="sungsu"><img src="images/스토어로케이터/store1.jpg"></li>
+                    <li class="l_item" class="garosu"><img src="images/스토어로케이터/store3.jpg"></li>
+                </ul>
+
+            </article>
+            <article class="s_script">
                 <h3>스토어 로케이터</h3><br>
                 <p>
                     매장에서는 이솝 컨설턴트가 고객 여러분을<br>
                     따뜻하게 맞이하고 기프트 구매를 위한<br>
                     맞춤형 컨설팅을 제공합니다.
                 </p>
-                <article class="close">
+                <div class="close">
                     <a href="#">가까운 스토어 찾기</a>
-                </article>
-            </div>
+                </div>
+            </article>
         </section>
         <!-- 공간 -->
         <section id="empty2">
@@ -167,8 +174,10 @@
                 </p>
             </div>
         </footer>
+
     </div>
     <script src="js/slideShow.js"></script>
+    <script src="js/slide.js"></script>
 </body>
 
 </html>
