--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <section id="main">
         <div class="header">
           <ul class="nav">
-            <li><a href="#">스킨케어</a></li>
+            <li><a href="./skincare.html">스킨케어</a></li>
             <li><a href="#">바디&핸드</a></li>
             <li><a href="#">향수</a></li>
             <li><a href="#">헤어</a></li>
@@ -30,7 +30,9 @@
             <a href="#">카트</a>
           </div>
         </div>
-        <h1 class="logo"><img src="./images/로고.png" alt="로고" /></h1>
+        <a href="./index.html" class="logo"
+          ><img src="./images/로고.png" alt="로고"
+        /></a>
       </section>
       <!-- 탁월한 셀렉션 -->
       <section id="section">
@@ -65,7 +67,6 @@
             <span class="next">&rang;</span>
           </p>
         </div>
-
         <div class="image_shop">
           <a href="#">shop now</a>
         </div>
