css 반응형및 css  logo 작업 수정

--- a/addcart.html
+++ b/addcart.html
@@ -50,6 +50,7 @@
             </ul>
           </div>
           <span>카트에 추가하기 - KRW 27,000</span>
+          <a href="./skincare.html" class="back">→ 뒤로가기 </a>
         </div>
       </div>
     </section>
