--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <!-- 상단 / 메인 네비 -->
     <section id="main">
       <div class="header">
+        <a href="./index.html" class="header_logo"><img src="./images/로고.png" alt="로고" /></a>
         <ul class="nav">
           <li><a href="./skincare.html">스킨케어</a></li>
           <li><a href="#">바디&핸드</a></li>
