--- a/skincare.html
+++ b/skincare.html
@@ -15,6 +15,7 @@
     <!-- 상단 / 메인 네비 -->
     <section id="main">
       <div class="header">
+        <a href="./index.html" class="header_logo"><img src="./images/로고.png" alt="로고" /></a>
         <ul class="nav">
           <li><a href="skincare.html">스킨케어</a></li>
           <li><a href="#">바디&핸드</a></li>
@@ -76,7 +77,9 @@
                 가벼운 메이크업을 지워주고, 피부에 남은 잔여물을 말끔하게
                 씻어내어 피부를 부드럽고 촉촉하게 가꿔 주는 크림 클렌저
               </p>
-              <div class="s_menu_shop">Add Cart</div>
+              <a href="./addcart.html">
+                <div class="s_menu_shop">Add Cart</div>
+              </a>
             </div>
             <div class="s_menu">
               <img src="./images/subpage menu/페뷸러스 페이스 클렌저.webp" alt="" />
@@ -86,7 +89,9 @@
                 수분 공급을 위한 보태니컬 성분이 함유된 부드러운 타입의 젤
                 클렌저
               </p>
-              <div class="s_menu_shop">Add Cart</div>
+              <a href="./addcart.html">
+                <div class="s_menu_shop">Add Cart</div>
+              </a>
             </div>
           </div>
         </article>
@@ -101,7 +106,9 @@
                 티 트리 리프, 너트 쉘, 클레이를 함유한 파우더 타입의 각질
                 관리제
               </p>
-              <div class="s_menu_shop">Add Cart</div>
+              <a href="./addcart.html">
+                <div class="s_menu_shop">Add Cart</div>
+              </a>
             </div>
             <div class="s_menu">
               <img src="./images/subpage menu/파슬리 씨드 클렌징 마스크.webp" alt="" />
@@ -112,7 +119,9 @@
                 딥 클렌징 마스크로 피부의 잔여물을 효과적으로 세정하며 피부의
                 수분감을 유지시켜줍니다.
               </p>
-              <div class="s_menu_shop">Add Cart</div>
+              <a href="./addcart.html">
+                <div class="s_menu_shop">Add Cart</div>
+              </a>
             </div>
             <div class="s_menu">
               <img src="./images/subpage menu/이그절티드 아이 세럼.png" alt="" />
@@ -123,7 +132,9 @@
                 함유한 가벼우면서 효과적인 아이 세럼으로 눈가 피부에 집중적인
                 수분을 공급해 피부를 고르게 표현합니다.
               </p>
-              <div class="s_menu_shop">Add Cart</div>
+              <a href="./addcart.html">
+                <div class="s_menu_shop">Add Cart</div>
+              </a>
             </div>
           </div>
         </article>
@@ -139,7 +150,9 @@
                 클렌저로 사용하기 적합합니다. 손쉽게 메이크업을 지우고
                 편안하게 씻어냅니다.
               </p>
-              <div class="s_menu_shop">Add Cart</div>
+              <a href="./addcart.html">
+                <div class="s_menu_shop">Add Cart</div>
+              </a>
             </div>
             <div class="s_menu">
               <img src="./images/subpage menu/인 투 마인즈 페이셜 클렌저.webp" alt="" />
@@ -149,7 +162,9 @@
                 피부의 수분을 빼앗지 않으면서도 모공을 부드럽고 효과적으로
                 세정해주는 젤 타입 클렌저
               </p>
-              <div class="s_menu_shop">Add Cart</div>
+              <a href="./addcart.html">
+                <div class="s_menu_shop">Add Cart</div>
+              </a>
             </div>
             <div class="s_menu">
               <img src="./images/subpage menu/어메이징 페이스 클렌저.webp" alt="" />
@@ -159,7 +174,9 @@
                 부드러운 거품이 피부를 효과적으로 세정하고 피부의 균형을
                 잡아주는 데일리 클렌저
               </p>
-              <div class="s_menu_shop">Add Cart</div>
+              <a href="./addcart.html">
+                <div class="s_menu_shop">Add Cart</div>
+              </a>
             </div>
           </div>
         </article>
@@ -174,7 +191,9 @@
                 보태닉 추출물이 함유되어 피부를 유연하게 해주며 피부 진정을
                 돕는 순한 쉐이빙 세럼
               </p>
-              <div class="s_menu_shop">Add Cart</div>
+              <a href="./addcart.html">
+                <div class="s_menu_shop">Add Cart</div>
+              </a>
             </div>
             <div class="s_menu">
               <img src="./images/subpage menu/페티그레인 리바이빙 바디 젤.webp" alt="" />
@@ -184,7 +203,9 @@
                 피부에 쿨링감을 주고 균형을 잡아주며 알로에 베라와 판테놀이
                 함유되어 피부를 부드럽게 진정시켜주는 애프터 썬 하이드레이터
               </p>
-              <div class="s_menu_shop">Add Cart</div>
+              <a href="./addcart.html">
+                <div class="s_menu_shop">Add Cart</div>
+              </a>
             </div>
             <div class="s_menu">
               <img src="./images/subpage menu/프로텍티브 바디 로션 SPF 50.webp" alt="" />
@@ -195,7 +216,9 @@
                 흡수되는 바디 전용 자외선 차단제 *(자외선 차단 기능성, SPF50+,
                 PA+++)
               </p>
-              <div class="s_menu_shop">Add Cart</div>
+              <a href="./addcart.html">
+                <div class="s_menu_shop">Add Cart</div>
+              </a>
             </div>
           </div>
         </article>
