1920px 메인 css, 메인 html a 링크 수정

--- a/index.html
+++ b/index.html
@@ -1,205 +1,218 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>aseop project</title>
+    <link rel="stylesheet" type="text/css" href="./css/reset.css" />
+    <link rel="stylesheet" type="text/css" href="./css/style.css" />
+    <script src="./js/jquery.js"></script>
+    <script></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>aseop project</title>
-  <link rel="stylesheet" type="text/css" href="./css/reset.css" />
-  <link rel="stylesheet" type="text/css" href="./css/style.css" />
-  <script src="./js/jquery.js"></script>
-  <script></script>
-</head>
-
-<body>
-  <div id="wrap">
-    <!-- 상단 / 메인 네비 -->
-    <section id="main">
-      <div class="header">
-        <a href="./index.html" class="header_logo"><img src="./images/로고.png" alt="로고" /></a>
-        <ul class="nav">
-          <li><a href="./skincare.html">스킨케어</a></li>
-          <li><a href="#">바디&핸드</a></li>
-          <li><a href="#">향수</a></li>
-          <li><a href="#">헤어</a></li>
-          <li><a href="#">홈</a></li>
-          <li><a href="#">여행&키트</a></li>
-        </ul>
-        <div class="login">
-          <a href="#">로그인</a>
-          <a href="#">/</a>
-          <a href="#">카트</a>
+  <body>
+    <div id="wrap">
+      <!-- 상단 / 메인 네비 -->
+      <section id="main">
+        <div class="header">
+          <a href="./index.html" class="header_logo"
+            ><img src="./images/로고.png" alt="로고"
+          /></a>
+          <ul class="nav">
+            <li><a href="./skincare.html">스킨케어</a></li>
+            <li><a href="#">바디&핸드</a></li>
+            <li><a href="#">향수</a></li>
+            <li><a href="#">헤어</a></li>
+            <li><a href="#">홈</a></li>
+            <li><a href="#">여행&키트</a></li>
+          </ul>
+          <div class="login">
+            <a href="#">로그인</a>
+            <a href="#">/</a>
+            <a href="#">카트</a>
+          </div>
         </div>
-      </div>
-      <a href="./index.html" class="logo"><img src="./images/로고.png" alt="로고" /></a>
-    </section>
-    <!-- 탁월한 셀렉션 -->
-    <section id="section">
-      <h3>탁월한 셀렉션</h3>
-      <div id="slideShow">
-        <ul class="slides">
-          <li>
-            <img src="images/탁월한 셀렉션/로즈 오 드 퍼퓸.png" alt="" />
-          </li>
-          <li>
-            <img src="images/탁월한 셀렉션/샤인 헤어 앤 비어드 오일.png" alt="" />
-          </li>
-          <li>
-            <img src="images/탁월한 셀렉션/아로마틱 핸드워시.png" alt="" />
-          </li>
-          <li>
-            <img src="images/탁월한 셀렉션/제라늄 리프 바디 클렌저.png" alt="" />
-          </li>
-          <li>
-            <img src="images/탁월한 셀렉션/테싯 오드 퍼퓸.png" alt="" />
-          </li>
-          <li><img src="images/탁월한 셀렉션/휠 오드 퍼퓸.png" alt="" /></li>
-        </ul>
-        <p class="controller">
-          <span class="prev">&lang;</span>
-          <span class="next">&rang;</span>
-        </p>
-      </div>
-      <div class="image_shop">
-        <a href="#">shop now</a>
-      </div>
-    </section>
-    <!-- 한정 출시 -->
-    <section id="launch">
-      <div class="launch_script">
-        <h3>한정 출시</h3>
-        <h4>이솝 & 릭 오웬스 트래블 키트</h4>
-        <p>
-          향기와 스타일을 추구하고 자신만의 길을 개척하려는 사람을 위한
-          키트로<br />
-          톡 쏘는 향기가 단연 돋보이는 오드 뚜왈렛과 세라믹 비즈릭 오웬스가<br />
-          큐레이팅한 에어와 바디 케어 필수품으로 구성되어 있습니다.
-        </p>
-        <div class="launch_shop">
+        <a href="./index.html" class="logo"
+          ><img src="./images/로고.png" alt="로고"
+        /></a>
+      </section>
+      <!-- 탁월한 셀렉션 -->
+      <section id="section">
+        <h3>탁월한 셀렉션</h3>
+        <div id="slideShow">
+          <ul class="slides">
+            <li>
+              <img src="images/탁월한 셀렉션/로즈 오 드 퍼퓸.png" alt="" />
+            </li>
+            <li>
+              <img
+                src="images/탁월한 셀렉션/샤인 헤어 앤 비어드 오일.png"
+                alt=""
+              />
+            </li>
+            <li>
+              <img src="images/탁월한 셀렉션/아로마틱 핸드워시.png" alt="" />
+            </li>
+            <li>
+              <img
+                src="images/탁월한 셀렉션/제라늄 리프 바디 클렌저.png"
+                alt=""
+              />
+            </li>
+            <li>
+              <img src="images/탁월한 셀렉션/테싯 오드 퍼퓸.png" alt="" />
+            </li>
+            <li><img src="images/탁월한 셀렉션/휠 오드 퍼퓸.png" alt="" /></li>
+          </ul>
+          <p class="controller">
+            <span class="prev">&lang;</span>
+            <span class="next">&rang;</span>
+          </p>
+        </div>
+        <div class="image_shop">
           <a href="#">shop now</a>
         </div>
-      </div>
-    </section>
-    <!--전문가 추천 -->
-    <section id="rec">
-      <div class="rec_script">
-        <h3>전문가 추천:컨설턴트의 블렌딩 제안</h3>
-      </div>
-    </section>
-    <section id="guide">
-      <div class="guide_script">
-        <h3>피부의 수분 공급을 위한 스킨케어 루틴 가이드</h3>
-      </div>
-    </section>
-    <!-- 향수의 역사 -->
-    <section id="history">
-      <div class="h_sciprt">
-        <h3>향수의 역사</h3>
-        <br />
-        <p>
-          초기 사내 실험에서 가장 최근 제품에 이르기까지<br />
-          에센셜 오일, 인내, 향수 제조학에 관한 이야기
-        </p>
-        <div>
-          <a href="#">더 보기</a>
+      </section>
+      <!-- 한정 출시 -->
+      <section id="launch">
+        <div class="launch_script">
+          <h3>한정 출시</h3>
+          <h4>이솝 & 릭 오웬스 트래블 키트</h4>
+          <p>
+            향기와 스타일을 추구하고 자신만의 길을 개척하려는 사람을 위한
+            키트로<br />
+            톡 쏘는 향기가 단연 돋보이는 오드 뚜왈렛과 세라믹 비즈릭 오웬스가<br />
+            큐레이팅한 에어와 바디 케어 필수품으로 구성되어 있습니다.
+          </p>
+          <div class="launch_shop">
+            <a href="#">shop now</a>
+          </div>
         </div>
-      </div>
-      <video class="h_video" autoplay muted loop>
-        <source src="./video/history.mp4.mp4" type="video/mp4" />
-      </video>
-    </section>
-    <!-- 공간 -->
-    <section id="empty">
-      <div class="h_empty"></div>
-    </section>
-    <!-- 스토어 로케이터 -->
-    <section id="store">
-      <article class="l_container">
-        <ul class="l_slider">
-          <li class="l_item" class="hannam">
-            <img src="images/스토어로케이터/store.jpg" />
-          </li>
-          <li class="l_item" class="sungsu">
-            <img src="images/스토어로케이터/store1.jpg" />
-          </li>
-          <li class="l_item" class="garosu">
-            <img src="images/스토어로케이터/store3.jpg" />
-          </li>
-        </ul>
-      </article>
-      <article class="s_script">
-        <h3>스토어 로케이터</h3>
-        <br />
-        <p>
-          매장에서는 이솝 컨설턴트가 고객 여러분을<br />
-          따뜻하게 맞이하고 기프트 구매를 위한<br />
-          맞춤형 컨설팅을 제공합니다.
-        </p>
-        <div class="close">
-          <a href="#">가까운 스토어 찾기</a>
+      </section>
+      <!--전문가 추천 -->
+      <section id="rec">
+        <div class="rec_script">
+          <h3>전문가 추천:컨설턴트의 블렌딩 제안</h3>
         </div>
-      </article>
-    </section>
-    <!-- 공간 -->
-    <section id="empty2">
-      <div class="h_empty2"></div>
-    </section>
-    <!-- travel -->
-    <section id="travel">
-      <article class="t_script">
-        <h3>트래블 키트</h3>
-        <p>
-          다양한 환경으로 떠나는 여행은 우리에게 새로운 발견을 선사하지만
-          스트레스와 피로를 유발할 수 있습니다.<br />
-          이러한 점을 고려해 이솝 트래블 키트는 여행의 고단함을 줄이고 즐거운
-          여정에 필요한 제품을 제공하기 위해<br />
-          트래블 사이즈의 스킨, 헤어, 바디 제품을 엄선해 구성했습니다.
-        </p>
-        <div>
-          <a href="#">트래블 키트 찾기</a>
+      </section>
+      <section id="guide">
+        <div class="guide_script">
+          <h3>피부의 수분 공급을 위한 스킨케어 루틴 가이드</h3>
         </div>
-      </article>
-      <div class="t_pic">
-        <img class="p1" src="./images/travel/boox.jpg" />
-        <img class="p2" src="./images/travel/air.jpg" />
-        <img class="p3" src="./images/travel/ski.jpg" />
-      </div>
-    </section>
-    <!-- metn -->
-    <section id="ment">
-      <div class="t_ment">
-        <h3>‘Fragrance is the voice of inanimate things.’</h3>
-        <p>- Mary Webb -</p>
-      </div>
-    </section>
-    <!-- 하단 -->
-    <footer id="footer">
-      <footer class="f_nav">
-        <div class="f_in">
-          <ul>
-            <li><a href="#">주문 및 지원</a></li>
-            <li><a href="#">서비스</a></li>
-            <li><a href="#">소개</a></li>
-            <li><a href="#">커뮤니티</a></li>
-            <li><a href="#">지속가능성</a></li>
+      </section>
+      <!-- 향수의 역사 -->
+      <section id="history">
+        <div class="h_sciprt">
+          <h3>향수의 역사</h3>
+          <br />
+          <p>
+            초기 사내 실험에서 가장 최근 제품에 이르기까지<br />
+            에센셜 오일, 인내, 향수 제조학에 관한 이야기
+          </p>
+          <div>
+            <a
+              href="https://www.aesop.com/kr/r/the-athenaeum/history-of-fragrance-at-aesop/"
+              >더 보기</a
+            >
+          </div>
+        </div>
+        <video class="h_video" autoplay muted loop>
+          <source src="./video/history.mp4.mp4" type="video/mp4" />
+        </video>
+      </section>
+      <!-- 공간 -->
+      <section id="empty">
+        <div class="h_empty"></div>
+      </section>
+      <!-- 스토어 로케이터 -->
+      <section id="store">
+        <article class="l_container">
+          <ul class="l_slider">
+            <li class="l_item" class="hannam">
+              <img src="images/스토어로케이터/store.jpg" />
+            </li>
+            <li class="l_item" class="sungsu">
+              <img src="images/스토어로케이터/store1.jpg" />
+            </li>
+            <li class="l_item" class="garosu">
+              <img src="images/스토어로케이터/store3.jpg" />
+            </li>
           </ul>
+        </article>
+        <article class="s_script">
+          <h3>스토어 로케이터</h3>
+          <br />
+          <p>
+            매장에서는 이솝 컨설턴트가 고객 여러분을<br />
+            따뜻하게 맞이하고 기프트 구매를 위한<br />
+            맞춤형 컨설팅을 제공합니다.
+          </p>
+          <div class="close">
+            <a href="https://www.aesop.com/kr/?visitMenu=open"
+              >가까운 스토어 찾기</a
+            >
+          </div>
+        </article>
+      </section>
+      <!-- 공간 -->
+      <section id="empty2">
+        <div class="h_empty2"></div>
+      </section>
+      <!-- travel -->
+      <section id="travel">
+        <article class="t_script">
+          <h3>트래블 키트</h3>
+          <p>
+            다양한 환경으로 떠나는 여행은 우리에게 새로운 발견을 선사하지만
+            스트레스와 피로를 유발할 수 있습니다.<br />
+            이러한 점을 고려해 이솝 트래블 키트는 여행의 고단함을 줄이고 즐거운
+            여정에 필요한 제품을 제공하기 위해<br />
+            트래블 사이즈의 스킨, 헤어, 바디 제품을 엄선해 구성했습니다.
+          </p>
+          <div>
+            <a href="#">트래블 키트 찾기</a>
+          </div>
+        </article>
+        <div class="t_pic">
+          <img class="p1" src="./images/travel/boox.jpg" />
+          <img class="p2" src="./images/travel/air.jpg" />
+          <img class="p3" src="./images/travel/ski.jpg" />
+        </div>
+      </section>
+      <!-- metn -->
+      <section id="ment">
+        <div class="t_ment">
+          <h3>‘Fragrance is the voice of inanimate things.’</h3>
+          <p>- Mary Webb -</p>
+        </div>
+      </section>
+      <!-- 하단 -->
+      <footer id="footer">
+        <footer class="f_nav">
+          <div class="f_in">
+            <ul>
+              <li><a href="#">주문 및 지원</a></li>
+              <li><a href="#">서비스</a></li>
+              <li><a href="#">소개</a></li>
+              <li><a href="#">커뮤니티</a></li>
+              <li><a href="#">지속가능성</a></li>
+            </ul>
+          </div>
+        </footer>
+        <div class="f_cus">
+          <h3>customer service</h3>
+          <p>
+            주의:상호:이솝코리아 유한회사 | 주소:서울특별시 강남구 도산대로45길
+            10-6이솝코리아 | 대표자:프레데리크미셀어완세일러 |
+            대표전화:1800-1987<br />
+            대표 이메일:aesop@aesop.com | 호스팅 사업자:SAP Hybris | 사업자 등록
+            번호:220-88-56014 | 통신판매업 신고번호:2014-서울강남-02300
+          </p>
         </div>
       </footer>
-      <div class="f_cus">
-        <h3>customer service</h3>
-        <p>
-          주의:상호:이솝코리아 유한회사 | 주소:서울특별시 강남구 도산대로45길
-          10-6이솝코리아 | 대표자:프레데리크미셀어완세일러 |
-          대표전화:1800-1987<br />
-          대표 이메일:aesop@aesop.com | 호스팅 사업자:SAP Hybris | 사업자 등록
-          번호:220-88-56014 | 통신판매업 신고번호:2014-서울강남-02300
-        </p>
-      </div>
-    </footer>
-  </div>
-  <script src="js/slideShow.js"></script>
-  <script src="js/slide.js"></script>
-</body>
-
+    </div>
+    <script src="js/slideShow.js"></script>
+    <script src="js/slide.js"></script>
+  </body>
 </html>
